// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TargetTx /> render null 1`] = `
<div
  className="flex flex-wrap md:items-center gap-2 md:gap-16 my-3 md:my-6 relative"
>
  <div
    className="w-36 flex items-center gap-2"
  >
    <span
      aria-label="info-circle"
      className="anticon anticon-info-circle cursor-help"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="info-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
    <span
      className="capitalize"
    >
      Target Tx Hash
    </span>
  </div>
</div>
`;

exports[`<TargetTx /> render target tx with TxStatus: 0 1`] = `
<div
  className="flex flex-wrap md:items-center gap-2 md:gap-16 my-3 md:my-6 relative"
>
  <div
    className="w-36 flex items-center gap-2"
  >
    <span
      aria-label="info-circle"
      className="anticon anticon-info-circle cursor-help"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="info-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
    <span
      className="capitalize"
    >
      Target Tx Hash
    </span>
  </div>
  <span>
    Waiting for the transaction on the target chain...
  </span>
</div>
`;

exports[`<TargetTx /> render target tx with TxStatus: 1 1`] = `
<div
  className="flex flex-wrap md:items-center gap-2 md:gap-16 my-3 md:my-6 relative"
>
  <div
    className="w-36 flex items-center gap-2"
  >
    <span
      aria-label="info-circle"
      className="anticon anticon-info-circle cursor-help"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="info-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
    <span
      className="capitalize"
    >
      Target Tx Hash
    </span>
  </div>
  <span>
    Waiting for the transaction on the target chain...
  </span>
</div>
`;

exports[`<TargetTx /> render target tx with TxStatus: 1 2`] = `
<div
  className="flex flex-wrap md:items-center gap-2 md:gap-16 my-3 md:my-6 relative"
>
  <div
    className="w-36 flex items-center gap-2"
  >
    <span
      aria-label="info-circle"
      className="anticon anticon-info-circle cursor-help"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="info-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
    <span
      className="capitalize"
    >
      Target Tx Hash
    </span>
  </div>
  <span>
    Waiting for the transaction on the target chain...
  </span>
</div>
`;

exports[`<TargetTx /> render target tx with TxStatus: 1 3`] = `
<div
  className="flex flex-wrap md:items-center gap-2 md:gap-16 my-3 md:my-6 relative"
>
  <div
    className="w-36 flex items-center gap-2"
  >
    <span
      aria-label="info-circle"
      className="anticon anticon-info-circle cursor-help"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="info-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
    <span
      className="capitalize"
    >
      Target Tx Hash
    </span>
  </div>
  <span>
    Waiting for the transaction on the target chain...
  </span>
</div>
`;

exports[`<TargetTx /> render target tx with TxStatus: 2 1`] = `
<div
  className="flex flex-wrap md:items-center gap-2 md:gap-16 my-3 md:my-6 relative"
>
  <div
    className="w-36 flex items-center gap-2"
  >
    <span
      aria-label="info-circle"
      className="anticon anticon-info-circle cursor-help"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="info-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
    <span
      className="capitalize"
    >
      Target Tx Hash
    </span>
  </div>
  <span>
    Waiting for the transaction on the target chain...
  </span>
</div>
`;

exports[`<TargetTx /> render target tx with TxStatus: 3 1`] = `
<div
  className="flex flex-wrap md:items-center gap-2 md:gap-16 my-3 md:my-6 relative"
>
  <div
    className="w-36 flex items-center gap-2"
  >
    <span
      aria-label="info-circle"
      className="anticon anticon-info-circle cursor-help"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="info-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
    <span
      className="capitalize"
    >
      Target Tx Hash
    </span>
  </div>
  <span
    className="space-x-2"
  >
    <a
      className="hover:opacity-80 transition-opacity duration-200 underline text-white"
      href="https://crab.subscan.io/tx/0x9bde128fdae638facd2c9a3758d14111d8324194b67d4060b8ecad896a79a668"
      onClick={[Function]}
      rel="noreferrer"
      target="_blank"
    >
      0x9bde128fdae638facd2c9a3758d14111d8324194b67d4060b8ecad896a79a668
    </a>
    <svg
      className="icon text-base w-4 h-4 cursor-pointer "
      onClick={[Function]}
    />
  </span>
</div>
`;

exports[`<TargetTx /> render target tx with TxStatus: 3 2`] = `
<div
  className="flex flex-wrap md:items-center gap-2 md:gap-16 my-3 md:my-6 relative"
>
  <div
    className="w-36 flex items-center gap-2"
  >
    <span
      aria-label="info-circle"
      className="anticon anticon-info-circle cursor-help"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="info-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
    <span
      className="capitalize"
    >
      Target Tx Hash
    </span>
  </div>
  <span
    className="space-x-2"
  >
    <a
      className="hover:opacity-80 transition-opacity duration-200 underline text-white"
      href="https://crab.subscan.io/tx/0x9bde128fdae638facd2c9a3758d14111d8324194b67d4060b8ecad896a79a668"
      onClick={[Function]}
      rel="noreferrer"
      target="_blank"
    >
      0x9bde128fdae638facd2c9a3758d14111d8324194b67d4060b8ecad896a79a668
    </a>
    <svg
      className="icon text-base w-4 h-4 cursor-pointer "
      onClick={[Function]}
    />
  </span>
</div>
`;

exports[`<TargetTx /> render target tx with TxStatus: 4 1`] = `
<div
  className="flex flex-wrap md:items-center gap-2 md:gap-16 my-3 md:my-6 relative"
>
  <div
    className="w-36 flex items-center gap-2"
  >
    <span
      aria-label="info-circle"
      className="anticon anticon-info-circle cursor-help"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="info-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
    <span
      className="capitalize"
    >
      Target Tx Hash
    </span>
  </div>
  <span
    className="space-x-2"
  >
    <a
      className="hover:opacity-80 transition-opacity duration-200 underline text-white"
      href="https://darwinia.subscan.io/tx/0x9bde128fdae638facd2c9a3758d14111d8324194b67d4060b8ecad896a79a668"
      onClick={[Function]}
      rel="noreferrer"
      target="_blank"
    >
      0x9bde128fdae638facd2c9a3758d14111d8324194b67d4060b8ecad896a79a668
    </a>
    <svg
      className="icon text-base w-4 h-4 cursor-pointer "
      onClick={[Function]}
    />
  </span>
</div>
`;

exports[`<TargetTx /> render target tx with TxStatus: 4 2`] = `
<div
  className="flex flex-wrap md:items-center gap-2 md:gap-16 my-3 md:my-6 relative"
>
  <div
    className="w-36 flex items-center gap-2"
  >
    <span
      aria-label="info-circle"
      className="anticon anticon-info-circle cursor-help"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="info-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
    <span
      className="capitalize"
    >
      Target Tx Hash
    </span>
  </div>
  <span
    className="space-x-2"
  >
    <a
      className="hover:opacity-80 transition-opacity duration-200 underline text-white"
      href="https://darwinia.subscan.io/tx/0x9bde128fdae638facd2c9a3758d14111d8324194b67d4060b8ecad896a79a668"
      onClick={[Function]}
      rel="noreferrer"
      target="_blank"
    >
      0x9bde128fdae638facd2c9a3758d14111d8324194b67d4060b8ecad896a79a668
    </a>
    <svg
      className="icon text-base w-4 h-4 cursor-pointer "
      onClick={[Function]}
    />
  </span>
</div>
`;

exports[`<TargetTx /> render target tx with TxStatus: 4 3`] = `
<div
  className="flex flex-wrap md:items-center gap-2 md:gap-16 my-3 md:my-6 relative"
>
  <div
    className="w-36 flex items-center gap-2"
  >
    <span
      aria-label="info-circle"
      className="anticon anticon-info-circle cursor-help"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="info-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
    <span
      className="capitalize"
    >
      Target Tx Hash
    </span>
  </div>
</div>
`;

exports[`<TargetTx /> should render null if refunded 1`] = `
<div
  className="flex flex-wrap md:items-center gap-2 md:gap-16 my-3 md:my-6 relative"
>
  <div
    className="w-36 flex items-center gap-2"
  >
    <span
      aria-label="info-circle"
      className="anticon anticon-info-circle cursor-help"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="info-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
    <span
      className="capitalize"
    >
      Target Tx Hash
    </span>
  </div>
  <span
    className="space-x-2"
  >
    <a
      className="hover:opacity-80 transition-opacity duration-200 underline text-white"
      href="https://darwinia.subscan.io/tx/0x9bde128fdae638facd2c9a3758d14111d8324194b67d4060b8ecad896a79a668"
      onClick={[Function]}
      rel="noreferrer"
      target="_blank"
    >
      0x9bde128fdae638facd2c9a3758d14111d8324194b67d4060b8ecad896a79a668
    </a>
    <svg
      className="icon text-base w-4 h-4 cursor-pointer "
      onClick={[Function]}
    />
  </span>
</div>
`;
